--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.93.3",
     "clsx": "^2.1.1",
     "next": "16.1.6",
     "react": "19.2.3",
