feat: implement admin login with Google OAuth and security whitelist
- Add NextAuth.js with Google Provider for admin authentication
- Implement strict email whitelist (mi.baus.g@gmail.com) for admin access
- Create middleware to protect /admin routes with redirect on unauthorized access
- Design minimalistic login-admin page with VOWS branding
- Add SessionProvider integration across the app
- Implement 30-minute session tokens for enhanced security
- Add logout functionality in admin dashboard
- Update environment variables configuration

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=tu-anon-key-aqui
 
 # Opcional: Service Role Key (solo para operaciones de admin/server)
 # SUPABASE_SERVICE_ROLE_KEY=tu-service-role-key
+
+# NextAuth.js - Google OAuth
+GOOGLE_CLIENT_ID=tu-google-client-id-aqui
+GOOGLE_CLIENT_SECRET=tu-google-client-secret-aqui
+NEXTAUTH_SECRET=tu-nextauth-secret-aqui
+NEXTAUTH_URL=http://localhost:3000
