--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@react-email/components": "^1.0.7",
+    "@react-email/render": "^2.0.4",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.3",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.4",
     "framer-motion": "^12.30.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.1.0",
@@ -23,7 +26,9 @@
     "next-auth": "^4.24.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-email": "^5.2.8",
     "react-icons": "^5.5.0",
+    "resend": "^6.9.1",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5"
   },
